# agent-kit

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/: auth.md  brain.md  google.md  jira.md  linear.md  notion.md  slack.md  tasks.md
kv/: README.md  pyproject.toml
kv/src/kv/: cli.py  db.py
kv/tests/: integration_test.sh  test_cli.py  test_db.py
notion/: README.md  pyproject.toml
notion/src/notion/: auth.py  cli.py  mcp.py  output.py
notion/tests/: test_output.py
oauth/: README.md  pyproject.toml
oauth/src/oauth/: cli.py  flow.py  provider.py
oauth/tests/: test_flow.py  test_provider.py
plans/: 003-jira.md  005-slack-read.md  006-test-suite.md  007-client-refactor.md
plans/done/: 001-agent-kit.md  002-linear.md  004-google-workspace.md  008-task-runner.md
src/agent_kit/: __init__.py  cli.py  config.py  errors.py  init.py  mcp.py  project.py
src/agent_kit/auth/: __init__.py  cli.py  oauth.py  providers.yaml
src/agent_kit/brain/: cli.py  client.py  git.py  index.py  search.py
src/agent_kit/brain/templates/: BRAIN.md  profile.md
src/agent_kit/check/: __init__.py  cli.py
src/agent_kit/commands/: project.py
src/agent_kit/google/: auth.py  calendar.py  cli.py  client.py  drive.py  mail.py
src/agent_kit/jira/: cli.py  client.py  resolve.py
src/agent_kit/kv/: __init__.py  cli.py  db.py
src/agent_kit/linear/: cli.py  client.py  resolve.py
src/agent_kit/log/: __init__.py  cli.py  db.py  formatters.py  models.py
src/agent_kit/mem/: __init__.py  cli.py  db.py  formatters.py  models.py
src/agent_kit/notion/: __init__.py  auth.py  cli.py  client.py  filters.py  mcp.py  output.py
src/agent_kit/oauth/: __init__.py  cli.py  flow.py  provider.py  tokens.py
src/agent_kit/slack/: api.py  cli.py  client.py  resolve.py
src/agent_kit/tasks/: cli.py  client.py  db.py
tests/: conftest.py  test_config.py  test_errors.py  test_init.py  test_project.py
tests/auth/: test_credentials.py  test_oauth.py
tests/brain/: test_cli.py  test_client.py
tests/check/: __init__.py  test_cli.py
tests/commands/: __init__.py  test_project.py
tests/google/: conftest.py  test_auth.py  test_calendar.py  test_cli.py  test_client.py  test_drive.py  test_mail.py
tests/jira/: test_cli.py  test_client.py
tests/kv/: test_cli.py  test_db.py
tests/linear/: test_cli.py  test_client.py
tests/log/: __init__.py  test_cli.py  test_db.py  test_models.py
tests/mem/: __init__.py  test_cli.py  test_db.py  test_models.py  test_project.py
tests/notion/: test_cli.py  test_client.py  test_output.py
tests/oauth/: test_flow.py  test_provider.py
tests/slack/: test_api.py  test_cli.py  test_resolve.py
tests/tasks/: test_cli.py  test_client.py
