[project]
name = "agent-kit"
version = "0.5.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
ak = "agent_kit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_kit"]

[tool.hatch.build.targets.wheel.force-include]
"src/agent_kit/auth/providers.yaml" = "agent_kit/auth/providers.yaml"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
