[project]
name = "notion"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "mcp>=1.0.0",
]

[project.scripts]
notion = "notion.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/notion"]
